--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="rowFooter">
         <footer>
             Made with <i class="fa fa-heart" aria-hidden="true"></i> by the IBM Cloud team</br>
-            Copyright © IBM 2018 | <a href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen">Privacy</a> 
+            <p> Copyright &copy; 2018-<script>document.write(new Date().getFullYear())</script> | <a href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen">Privacy</a> 
         </footer>
 </div>
 <br>
