Bluemix --> IBM Cloud

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Twana Daniel || IBM"/>
     <meta name="description" content="IBM Cloud solution tutorials, learn how to build, deploy and scale real-world solutions on IBM Cloud. These guides provide step-by-step instructions on how to use IBM Cloud to implement common patterns based on best practices and proven technologies."/>
     <meta name="keywords" content="Samples,Tutorials, IBM Cloud Tutorials, Code Samples, IBM Cloud, IBM Cloud, IoT, Watson, Cognitive, Cloudant, OpenWhisk, IBM Cloud Tutorials, IBM Cloud samples, mobile app, python, java, nodeJS, swift, IBM Cloud Code, IBM Cloud Apps, Watson Samples"/>
-    <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
+    <meta name="segment" property="IBM-Cloud.GitHub.io" value="BluemixSample">
     <meta name="google-site-verification" content="fUE5UABOVoKfMqnyk498ykxLXpTBhRdXQn7fD4Cb02w" />
     <!-- FontAwesome icons -->
     <link rel="stylesheet" href="//use.fontawesome.com/74dfc6cf47.css">
