--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<meta http-equiv="refresh" content="5; URL=https://cloud.ibm.com/docs/solution-tutorials?topic=solution-tutorials-tutorials" />
-	<script type="text/javascript" src="scripts.js">
-	</script>
-	<link rel="stylesheet" href="styles.css">
+  <head>
+    <meta http-equiv="refresh" content="1; URL=https://cloud.ibm.com/docs/solution-tutorials?topic=solution-tutorials-tutorials" />
     <title>This page has moved</title>
-</head>
-
-<body>
-    <p>If you are not redirected in five seconds, <a href="https://cloud.ibm.com/docs/solution-tutorials?topic=solution-tutorials-tutorials">click here</a>.</p>
-</body>
-
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://cloud.ibm.com/docs/solution-tutorials?topic=solution-tutorials-tutorials">click here</a>.</p>
+  </body>
 </html>
